switchbotをmysqlで管理する

--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -1,1 +1,11 @@
-aaa
+<head>
+    <title> デバイスリスト</title>
+</head>
+    
+<body>
+    <meta charset="utf-8">
+    {% for list in lists %}
+        {{ list }}
+    {% endfor %}
+    
+</body>
